pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__user_id.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 1
inner:
  user_id:
    offset: 0
    length: 1
    inner: John <john@example.com>
